CS35200/tests/project2_3_tests/pos/class_1.java
class Main {
    public static void main(String[] args) {
    }
}

class b {
    int c() {
        return 5;
    }
}