CS35200/tests/project2_3_tests/neg/neg_dup_class.java
class Main {
    public static void main(String[] args) {
    }
}

class b {
    int c() {
        return 5;
    }
}

class b {
    int c() {
        return 5;
    }
}